# gameoflife

./: .gitignore  CMakeLists.txt  Makefile  fps_clock.cpp  fps_clock.hpp  gameoflife.cpp  gameoflife.hpp  herbivore.cpp  herbivore.hpp  herd.cpp  herd.hpp  main.cpp  x1.cpp  x11_display.cpp  x11_display.hpp
